fixed the toggle icons & scrollbar

--- a/Frontend_React/src/index.css
+++ b/Frontend_React/src/index.css
@@ -5,6 +5,35 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+    overflow-x: hidden;
+}
+
+/* Customize website's scrollbar like Mac OS
+Not supports in Firefox and IE */
+
+/* total width */
+body::-webkit-scrollbar {
+    background-color: transparent;
+    width: 6px;
+}
+
+/* background of the scrollbar except button or resizer */
+body::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+/* scrollbar itself */
+body::-webkit-scrollbar-thumb {
+    background-color: rgba(90, 90, 90, 0.85);
+    /*border: 4px solid #fff;*/
+}
+
+/* set button(top and bottom of the scrollbar) */
+body::-webkit-scrollbar-button {
+    display:none;
+}
+
 body {
     background: #223a52;
     overflow-x: hidden;
